--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "geist": "^1.4.2",
+    "html2canvas-pro": "^1.5.11",
     "immer": "^10.1.1",
+    "jspdf": "^3.0.1",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.516.0",
     "next": "15.3.3",
