--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@geoman-io/leaflet-geoman-free": "^2.18.3",
     "@hookform/resolvers": "^5.1.1",
     "@prisma/client": "^6.10.0",
+    "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-collapsible": "^1.1.11",
     "@radix-ui/react-dialog": "^1.1.14",
