--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "db:studio": "prisma studio"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.9.1",
     "@geoman-io/leaflet-geoman-free": "^2.18.3",
     "@hookform/resolvers": "^5.1.1",
     "@prisma/client": "^6.10.0",
@@ -34,6 +35,7 @@
     "@react-leaflet/core": "^3.0.0",
     "@tanstack/react-table": "^8.21.3",
     "ahp-calc": "^1.2.7",
+    "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "geist": "^1.4.2",
@@ -43,6 +45,7 @@
     "leaflet": "^1.9.4",
     "lucide-react": "^0.516.0",
     "next": "15.3.3",
+    "next-auth": "5.0.0-beta.28",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
